--- a/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
@@ -1223,10 +1223,10 @@
 "tbmatic_home_card_years_ago" = "%d Года/Лет назад";
 "tbmatic_home_card_this_year" = "Этот Год";
 "campaign_card_title" = "Розыгрыш Телефона PhotoPick";
-"campaign_description_label_new_user" = "Как насчет выиграть право на первый розыгрыш Samsung Galaxy Note 10? Проанализируйте свои фотографии при помощи PhotoPick и получите шанс стать одним из 20 претендентов на выигрыш Note 10!";
-"campaign_description_label_experienced_user" = "Вы еще не начали выигрывать права на участие в сегодняшнем розыгрыше. Проанализируйте свои фотографии при помощи PhotoPick и увеличьте свои шансы на выигрыш Galaxy Note 10. Ваше общее количество прав на розыгрыш: % d";
-"campaign_description_label_limit_reached" = "Ваши права на 10 попыток в день закончились. Завтра вновь используйте PhotoPick и увеличьте свои права на розыгрыш. Ваше общее количество прав на розыгрыш: % d";
-"campaign_description_label_another" = "Ваше общее количество прав на розыгрыш: %d! Проанализируйте свои фотографии при помощи PhotoPick, увеличьте свои шансы на розыгрыш и получите возможность стать одним из 20 претендентов на выигрыш Samsung Galaxy Note 10!";
+"campaign_description_label_new_user" = "You have not participated in the campaign yet. Start analyzing your photos with PhotoPick and get the chance to be winner!";
+"campaign_description_label_experienced_user" = "You have not started today. Analyze your photos with PhotoPick and get more chance. Your total draw: %d";
+"campaign_description_label_limit_reached" = "You have already completed daily draw for today. Keep analyzing tomorrow! Your total draw: %d";
+"campaign_description_label_another" = "Your total raffle is %d! Keep analyzing your photos with PhotoPick, increase your chances of winning!";
 "campaign_campaign_detail_button" = "Подробности Розыгрыша";
 "analyze_photo_pic_detail_button" = "Проанализировать с PhotoPick!";
 "campaign_detail_title" = "Подробности Розыгрыша";
@@ -1270,11 +1270,11 @@
 "campaign_vc_bottom_title" = "Розыгрыш Телефона PhotoPick";
 "campaign_vc_bottom_description" = "Для участия в розыгрыше и для оценки в рамках кампании, информация вашего профиля должна быть полной и без пропусков. Вы можете обновить информацию, нажав кнопку «Редактировать Профиль».";
 "campaign_vc_top_without_title" = "ПРАВ НЕ ОСТАЛОСЬ:(";
-"campaign_vc_top_without_description" = "Прав на анализ PhotoPick не осталось. Став Premium вы можете получить неограниченные права PhotoPick. Продолжайте анализировать свои фотографии с помощью PhotoPick и увеличьте свои шансы стать одним из 20 выигравших Samsung Galaxy Note 10!";
+"campaign_vc_top_without_description" = "No PhotoPick Analysis left. Become Premium, get unlimited PhotoPick and increase your chance of winning!";
 "campaign_vc_top_title_zero" = "ДНЕВНОЙ ЛИМИТ ИСЧЕРПАН!";
-"campaign_vc_top_description_zero" = "Вы исчерпали свой дневной лимит прав на розыгрыш. Продолжайте анализировать свои фотографии с помощью PhotoPick и увеличьте свои шансы стать одним из 20 выигравших Samsung Galaxy Note 10!";
+"campaign_vc_top_description_zero" = "You have just completed total daily raffle. Keep analyzing your photos with PhotoPick tomorrow, increase your chances of winning!";
 "campaign_vc_top_title_non_zero" = "ПРОДОЛЖАЙТЕ АНАЛИЗ!";
-"campaign_vc_top_description_non_zero" = "Вы завершили %d. дневных прав на розыгрыш в рамках кампании. Продолжайте анализировать свои фотографии с помощью PhotoPick и увеличьте свой шанс стать одним из 20 выигравших Samsung Galaxy Note 10!";
+"campaign_vc_top_description_non_zero" = "Congrats! You have completed %d PhotoPick for today. Keep analyzing your photos with PhotoPick and increase your chances of winning!";
 "create_story_empty_name_error" = "Пустое название истории";
 "photopick_history_campaign_contest_total_draw" = "Общее Количество Моих Прав на Розыгрыш";
 "photopick_history_campaign_contest_remaining_draw" = "Остаток Моего Дневного Права на Розыгрыш";
@@ -1877,6 +1877,6 @@
 "accessibility_pause" = "Остановить";
 
 /*Password Rules*/
-"signup_password_rule_character_limit" = "";
-"signup_password_rule_upper_lower_numeric" = "";
-"signup_password_rule_sequential_characters" = "";
+"signup_password_rule_character_limit" = "Минимум 6, максимум 16 символов";
+"signup_password_rule_upper_lower_numeric" = "Минимум 1 заглавная буква, 1 строчная буква и 1 цифра";
+"signup_password_rule_sequential_characters" = "Непоследовательные символы";
