--- a/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
@@ -1252,10 +1252,10 @@
 "tbmatic_home_card_years_ago" = "%d vite më parë";
 "tbmatic_home_card_this_year" = "Këtë vit";
 "campaign_card_title" = "PhotoPick Phone Campaign";
-"campaign_description_label_new_user" = "You have not participated in the campaign yet. Start analyzing your photos with PhotoPick and get the chance to be one of the 20 winners for Samsung Galaxy Note 10!";
+"campaign_description_label_new_user" = "You have not participated in the campaign yet. Start analyzing your photos with PhotoPick and get the chance to be winner!";
 "campaign_description_label_experienced_user" = "You have not started today. Analyze your photos with PhotoPick and get more chance. Your total draw: %d";
 "campaign_description_label_limit_reached" = "You have already completed daily draw for today. Keep analyzing tomorrow! Your total draw: %d";
-"campaign_description_label_another" = "Your total draw is %d! Analyze your photos with PhotoPick and increase your chance to be one of the 20 winners for Samsung Galaxy Note 10!";
+"campaign_description_label_another" = "Your total raffle is %d! Keep analyzing your photos with PhotoPick, increase your chances of winning!";
 "campaign_campaign_detail_button" = "Campaign Details";
 "analyze_photo_pic_detail_button" = "Analyze with PhotoPick";
 "campaign_detail_title" = "Campaign Details";
@@ -1299,11 +1299,11 @@
 "campaign_vc_bottom_title" = "PhotoPick Phone Campaign";
 "campaign_vc_bottom_description" = "Your profile information must be complete in order to participate in the campaign and to be evaluated within the draw. You can update your information by clicking the Edit Profile button";
 "campaign_vc_top_without_title" = "UPS SORRY:(";
-"campaign_vc_top_without_description" = "No PhotoPick Analysis left. Become Premium, get unlimited PhotoPick and increase your chance of becoming one of the 20 winners for Samsung Galaxy Note 10!";
+"campaign_vc_top_without_description" = "No PhotoPick Analysis left. Become Premium, get unlimited PhotoPick and increase your chance of winning!";
 "campaign_vc_top_title_zero" = "DAILY LIMIT IS OVER!";
-"campaign_vc_top_description_zero" = "You have just completed total daily draw. You can try tomorrow again and increase your chance of becoming one of the 20 winners for Samsung Galaxy Note 10!";
+"campaign_vc_top_description_zero" = "You have just completed total daily raffle. Keep analyzing your photos with PhotoPick tomorrow, increase your chances of winning!";
 "campaign_vc_top_title_non_zero" = "KEEP GOING!";
-"campaign_vc_top_description_non_zero" = "Congrats! You have completed %d PhotoPick for today. Keep analyzing your photos with PhotoPick and increase your chance of becoming one of the 20 winners for the Samsung Galaxy Note 10!";
+"campaign_vc_top_description_non_zero" = "Congrats! You have completed %d PhotoPick for today. Keep analyzing your photos with PhotoPick and increase your chances of winning!";
 "create_story_empty_name_error" = "Story name can not be empty";
 "photopick_history_campaign_contest_total_draw" = "Total Draw";
 "photopick_history_campaign_contest_remaining_draw" = "Daily Draw Left";
@@ -1906,6 +1906,6 @@
 "accessibility_pause" = "Ndalo";
 
 /*Password Rules*/
-"signup_password_rule_character_limit" = "";
-"signup_password_rule_upper_lower_numeric" = "";
-"signup_password_rule_sequential_characters" = "";
+"signup_password_rule_character_limit" = "Minimumi 6, maksimumi 16 karaktere";
+"signup_password_rule_upper_lower_numeric" = "Së paku 1 shkronjë e madhe, 1 shkronjë e vogël dhe 1 numër";
+"signup_password_rule_sequential_characters" = "shkronja jo të njëpasnjëshëm";
