--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -1916,3 +1916,9 @@
 "signup_password_rule_character_limit" = "Min 6 - max 16 characters";
 "signup_password_rule_upper_lower_numeric" = "At least 1 uppercase, 1 lowercase letter and 1 number";
 "signup_password_rule_sequential_characters" = "Non-consecutive characters";
+"profile_recovery_mail" = "Recovery E-mail";
+"profile_recovery_mail_desc" = "Kurtarma e-postası şifreni unuttuğunda doğrulama için kullanılır";
+"profile_recovery_mail_hint" = "Henüz kurtarma e-postası girmemişsiniz";
+"profile_mail_verified" = "Verified";
+"profile_verify" = "Verify";
+"masterpass_quota_package_cancel" = "To cancel your package, please visit www.mylifebox.com";
