--- a/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
@@ -1866,3 +1866,9 @@
 "signup_password_rule_character_limit" = "Minim 6, maxim 16 caractere";
 "signup_password_rule_upper_lower_numeric" = "Minim 1 majusculă, 1 litere mică și 1 număr";
 "signup_password_rule_sequential_characters" = "Caractere non-consecutive";
+"profile_recovery_mail" = "";
+"profile_recovery_mail_desc" = "";
+"profile_recovery_mail_hint" = "";
+"profile_mail_verified" = "";
+"profile_verify" = "";
+"masterpass_quota_package_cancel" = "";
