--- a/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
@@ -1884,3 +1884,9 @@
 "signup_password_rule_character_limit" = "En az 6, en çok 16 karakter";
 "signup_password_rule_upper_lower_numeric" = "En az 1 büyük, 1 küçük harf ve 1 rakam";
 "signup_password_rule_sequential_characters" = "Ardışık olmayan karakterler";
+"profile_recovery_mail" = "";
+"profile_recovery_mail_desc" = "";
+"profile_recovery_mail_hint" = "";
+"profile_mail_verified" = "";
+"profile_verify" = "";
+"masterpass_quota_package_cancel" = "Paketini iptal etmek için lütfen www.mylifebox.com'u ziyaret et";
