--- a/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
@@ -1909,3 +1909,11 @@
 "signup_password_rule_character_limit" = "Minimumi 6, maksimumi 16 karaktere";
 "signup_password_rule_upper_lower_numeric" = "Së paku 1 shkronjë e madhe, 1 shkronjë e vogël dhe 1 numër";
 "signup_password_rule_sequential_characters" = "shkronja jo të njëpasnjëshëm";
+"profile_recovery_mail" = "";
+"profile_recovery_mail_desc" = "";
+"profile_recovery_mail_hint" = "";
+"profile_mail_verified" = "";
+"profile_verify" = "";
+"masterpass_quota_package_cancel" = "";
+"profile_recovery_email_empty" = "";
+"profile_recovery_email_invalid" = "";
